--- a/app/shop/shop.html
+++ b/app/shop/shop.html
@@ -13,7 +13,7 @@
 <body>
     
     <nav class="navbar">
-        <img src="/../../assets/logo.svg" alt="logo" class="logo">
+        <img src="../../assets/logo.svg" alt="logo" class="logo">
         <div class="nav-links">
             <a href="../../index.html" class="nav-link">Home</a>
             <a href="app/shop/shop.html" class="nav-link">Shop</a>
